# slm-distill

./: .gitignore  README.md  experiment.ipynb  pyproject.toml
configs/: config.yaml
notebooks/: experiment.ipynb
src/: main.py
src/data/: data.py  eval_prepare.py  nativeSLM.py
src/evals/: BERTsim_eval.py  BLEU_evals.py  CHRF_eval.py  MTP_eval.py  MTP_perplexity_eval.py  NER_eval.py  NTP_eval.py  cosine_sim_eval.py  evals.py  mtp_perplexity_eval.py  ner_eval.py  nli_eval.py  post_train_evals_run.py  sentiment_eval.py
src/evals/task_finetuning/: finetuning.py  ner_run.py  ner_train.py  nli_run.py  nli_train.py  sentiment_run.py  sentiment_train.py
src/models/: student_model.py  teacher_model.py
src/task_finetuning/: finetuning.py  ner_data.py  ner_run.py  ner_train.py  nli_data.py  nli_run.py  nli_train.py  sentiment_data.py  sentiment_run.py  sentiment_train.py
src/training/: accumulator.py  checkpointing.py  logging.py  loss.py  scheduler.py  trainer.py
tests/: test_BLEU.py  test_CHRF.py  test_MTP.py  test_MTP_accuracy.py  test_MTP_perplexity.py  test_NER.py  test_NTP.py  test_maskedloss.py  test_ner_pipeline.py  test_nli.py  test_nli_pipeline.py  test_semantic.py  test_sentiment.py  test_sentiment_pipeline.py
