[project]
name = "slm-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bert-score>=0.3.13",
    "datasets>=4.3.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.0",
    "pytest>=8.4.2",
    "sacrebleu>=2.4.0",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
